# capstone210-ppd-carmeli_chari_hand_lee

./: .gitignore  210_CDC_EDA.ipynb  README.md  build_push.sh  prams_survey_eda.R  pyproject.toml  run.sh  streamlit_run.sh
backend/: Dockerfile  pyproject.toml
backend/.k8s/bases/: deployment-lab4.yaml  kustomization.yaml  service-w210.yaml
backend/.k8s/overlays/dev/: kustomization.yaml  namespace.yaml  patch-deployment-lab4.yaml  patch-deployment-w210.yaml
backend/.k8s/overlays/prod/: kustomization.yaml  patch-deployment-lab4.yaml  patch-deployment-lab4_copy.yaml  virtual-service.yaml
backend/infra/: deployment-pythonapi.yaml  deployment-redis.yaml
backend/src/: main.py  model_high_imp_scl.pkl  model_kbins.pkl  model_low_imp_scl.pkl  model_pipeline.pkl  model_pipeline_high.pkl  model_pipeline_low.pkl
backend/trainer/: model_high_imp_scl.pkl  model_imp_scl.pkl  model_low_imp_scl.pkl  model_pipeline_high.pkl  model_pipeline_low.pkl  testing.ipynb  testing.py  train.ipynb  train.py  trainer.ipynb  trainer.py
backend_img/: pyproject.toml
data/: cdc_nhanes_var_mapping.csv
eda/: candidate_target_variable_stats.csv  cdc_survey_eda.R  correlation_matrix.csv  misc.R  survey_data_eda_final.ipynb
modeling/: Misc Code.ipynb  best_vs_baseline_performance.csv  best_vs_baseline_performance_base_vs_best.csv  best_vs_baseline_performance_base_vs_opt5.csv  (+14 more)
pipeline/: agg_cdc_pipeline_sanitize_data.ipynb  cdc_agg_pipe.ipynb  cdc_survey_pipeline_stage2_tmp.R  misc_cdc_agg_pipe_all_years.ipynb  pyproject.toml
pipeline/sandbox/: sandbox_cdc_agg_pipe.ipynb
(+54 files in other folders)
