[tool.poetry]
name = "pipeline"
version = "0.2.0"
description = ""
authors = ["Jon Hand <hand.jonathan.13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10, <3.12"
pandas = "^1.3.5"
numpy = "^1.23"
xport = "^3.6.1"
requests = "^2.31.0"
bs4 = "^0.0.1"
lxml = "^4.9.2"
joblib = "^1.2.0"
scikit-learn = "1.2.2"
imbalanced-learn = "^0.10.1"
ipywidgets = "^8.0.6"
xgboost = "^1.7.5"
fastapi-cache2 = "0.1.9"
fastapi = "^0.89.1"
uvicorn = "^0.22.0"
redis = "^4.6.0"
pydantic = "^1.10.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
