[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["Jon Hand <hand.jonathan.13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.5"
numpy = "^1.24.3"
xport = "^3.6.1"
requests = "^2.31.0"
bs4 = "^0.0.1"
lxml = "^4.9.2"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
